--- a/front_end/manifest.json
+++ b/front_end/manifest.json
@@ -5,7 +5,7 @@
   "description": "A Chrome extension that fills out job applications using an uploaded resume using  GPT-3",
   
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "interact.js"
   },
   "content_scripts": [
     {
